[gd_scene load_steps=5 format=3 uid="uid://bfb2ggi0rsmgc"]

[ext_resource type="Script" uid="uid://dawrh5wpvckes" path="res://Weapons/PongWeapon/pong_weapon.gd" id="1_uvu1x"]
[ext_resource type="Texture2D" uid="uid://dc70jnbhj3sy7" path="res://icon.svg" id="2_kxxi3"]
[ext_resource type="PackedScene" uid="uid://br3x8g6krr5mb" path="res://Weapons/PongWeapon/State/pong_weapon_state_machine.tscn" id="3_kxxi3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_71kk5"]

[node name="WeaponBody" type="RigidBody2D"]
script = ExtResource("1_uvu1x")

[node name="WeaponCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_71kk5")

[node name="WeaponSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_kxxi3")

[node name="StateMachine" parent="." node_paths=PackedStringArray("weapon_rigid_body") instance=ExtResource("3_kxxi3")]
weapon_rigid_body = NodePath("..")
